--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -17,11 +17,12 @@
 	<servlet>
 		<servlet-name>basicServlet</servlet-name>
 		<servlet-class>kr.or.ddit.servlet.basic.BasicServlet</servlet-class>
+		<load-on-startup>1</load-on-startup>
 	</servlet>
 
 	<!-- servlet에서 처리할 url매핑 -->
 	<servlet-mapping>
 		<servlet-name>basicServlet</servlet-name>
-		<url-pattern>/basicServelt</url-pattern>
+		<url-pattern>/basicServlet</url-pattern>
 	</servlet-mapping>
 </web-app>
