--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -63,4 +63,24 @@
     <servlet-name>pagingUser</servlet-name>
     <url-pattern>/pagingUser</url-pattern>
   </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>UserController</display-name>
+    <servlet-name>UserController</servlet-name>
+    <servlet-class>kr.or.ddit.user.controller.UserController</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>UserController</servlet-name>
+    <url-pattern>/UserController</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>ModifyUser</display-name>
+    <servlet-name>ModifyUser</servlet-name>
+    <servlet-class>kr.or.ddit.user.controller.ModifyUser</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>ModifyUser</servlet-name>
+    <url-pattern>/ModifyUser</url-pattern>
+  </servlet-mapping>
 </web-app>
