--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,86 +1,126 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
-  <display-name>jsp</display-name>
-  <welcome-file-list>
-    <welcome-file>index.html</welcome-file>
-    <welcome-file>index.htm</welcome-file>
-    <welcome-file>index.jsp</welcome-file>
-    <welcome-file>default.html</welcome-file>
-    <welcome-file>default.htm</welcome-file>
-    <welcome-file>default.jsp</welcome-file>
-  </welcome-file-list>
-  <servlet>
-    <servlet-name>basicServlet</servlet-name>
-    <servlet-class>kr.or.ddit.servlet.basic.BasicServlet</servlet-class>
-    <load-on-startup>1</load-on-startup>
-  </servlet>
-  <servlet>
-    <servlet-name>TimesTablesServlet</servlet-name>
-    <servlet-class>kr.or.ddit.servlet.basic.ServletTable</servlet-class>
-    <load-on-startup>1</load-on-startup>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>basicServlet</servlet-name>
-    <url-pattern>/basicServlet</url-pattern>
-  </servlet-mapping>
-  <servlet-mapping>
-    <servlet-name>TimesTablesServlet</servlet-name>
-    <url-pattern>/TimesTablesServlet</url-pattern>
-  </servlet-mapping>
-  <error-page>
-    <error-code>404</error-code>
-    <location>/error/404/404.jsp</location>
-  </error-page>
-  <error-page>
-    <error-code>500</error-code>
-    <location>/error/500/500.jsp</location>
-  </error-page>
-  <error-page>
-    <exception-type>java.lang.ArithmeticException</exception-type>
-    <location>/error/type/ariError.jsp</location>
-  </error-page>
-  <error-page>
-    <exception-type>java.lang.RuntimeException</exception-type>
-    <location>/error/type/runError.jsp</location>
-  </error-page>
-  <servlet>
-    <description></description>
-    <display-name>AllUser</display-name>
-    <servlet-name>AllUser</servlet-name>
-    <servlet-class>kr.or.ddit.user.controller.AllUser</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>AllUser</servlet-name>
-    <url-pattern>/alluser</url-pattern>
-  </servlet-mapping>
-  <servlet>
-    <description></description>
-    <display-name>pagingUser</display-name>
-    <servlet-name>pagingUser</servlet-name>
-    <servlet-class>kr.or.ddit.user.controller.pagingUser</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>pagingUser</servlet-name>
-    <url-pattern>/pagingUser</url-pattern>
-  </servlet-mapping>
-  <servlet>
-    <description></description>
-    <display-name>UserController</display-name>
-    <servlet-name>UserController</servlet-name>
-    <servlet-class>kr.or.ddit.user.controller.UserController</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>UserController</servlet-name>
-    <url-pattern>/UserController</url-pattern>
-  </servlet-mapping>
-  <servlet>
-    <description></description>
-    <display-name>ModifyUser</display-name>
-    <servlet-name>ModifyUser</servlet-name>
-    <servlet-class>kr.or.ddit.user.controller.ModifyUser</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>ModifyUser</servlet-name>
-    <url-pattern>/ModifyUser</url-pattern>
-  </servlet-mapping>
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xmlns="http://java.sun.com/xml/ns/javaee"
+	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
+	version="2.5">
+	<display-name>jsp</display-name>
+	<welcome-file-list>
+		<welcome-file>index.html</welcome-file>
+		<welcome-file>index.htm</welcome-file>
+		<welcome-file>index.jsp</welcome-file>
+		<welcome-file>default.html</welcome-file>
+		<welcome-file>default.htm</welcome-file>
+		<welcome-file>default.jsp</welcome-file>
+	</welcome-file-list>
+	<servlet>
+		<servlet-name>basicServlet</servlet-name>
+		<servlet-class>kr.or.ddit.servlet.basic.BasicServlet</servlet-class>
+		<load-on-startup>1</load-on-startup>
+	</servlet>
+	<servlet>
+		<servlet-name>TimesTablesServlet</servlet-name>
+		<servlet-class>kr.or.ddit.servlet.basic.ServletTable</servlet-class>
+		<load-on-startup>1</load-on-startup>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>basicServlet</servlet-name>
+		<url-pattern>/basicServlet</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>TimesTablesServlet</servlet-name>
+		<url-pattern>/TimesTablesServlet</url-pattern>
+	</servlet-mapping>
+	<error-page>
+		<error-code>404</error-code>
+		<location>/error/404/404.jsp</location>
+	</error-page>
+	<error-page>
+		<error-code>500</error-code>
+		<location>/error/500/500.jsp</location>
+	</error-page>
+	<error-page>
+		<exception-type>java.lang.ArithmeticException</exception-type>
+		<location>/error/type/ariError.jsp</location>
+	</error-page>
+	<error-page>
+		<exception-type>java.lang.RuntimeException</exception-type>
+		<location>/error/type/runError.jsp</location>
+	</error-page>
+	<servlet>
+		<description></description>
+		<display-name>AllUser</display-name>
+		<servlet-name>AllUser</servlet-name>
+		<servlet-class>kr.or.ddit.user.controller.AllUser</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>AllUser</servlet-name>
+		<url-pattern>/alluser</url-pattern>
+	</servlet-mapping>
+	<servlet>
+		<description></description>
+		<display-name>pagingUser</display-name>
+		<servlet-name>pagingUser</servlet-name>
+		<servlet-class>kr.or.ddit.user.controller.pagingUser</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>pagingUser</servlet-name>
+		<url-pattern>/pagingUser</url-pattern>
+	</servlet-mapping>
+	<servlet>
+		<description></description>
+		<display-name>UserController</display-name>
+		<servlet-name>UserController</servlet-name>
+		<servlet-class>kr.or.ddit.user.controller.UserController</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>UserController</servlet-name>
+		<url-pattern>/UserController</url-pattern>
+	</servlet-mapping>
+	<servlet>
+		<description></description>
+		<display-name>ModifyUser</display-name>
+		<servlet-name>ModifyUser</servlet-name>
+		<servlet-class>kr.or.ddit.user.controller.ModifyUser</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>ModifyUser</servlet-name>
+		<url-pattern>/ModifyUser</url-pattern>
+	</servlet-mapping>
+	<servlet>
+		<description></description>
+		<display-name>RegistUser</display-name>
+		<servlet-name>RegistUser</servlet-name>
+		<servlet-class>kr.or.ddit.user.controller.RegistUser</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>RegistUser</servlet-name>
+		<url-pattern>/registUser</url-pattern>
+	</servlet-mapping>
+	<servlet>
+		<description></description>
+		<display-name>UserDelete</display-name>
+		<servlet-name>UserDelete</servlet-name>
+		<servlet-class>kr.or.ddit.user.controller.UserDelete</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>UserDelete</servlet-name>
+		<url-pattern>/UserDelete</url-pattern>
+	</servlet-mapping>
+	<servlet>
+		<description></description>
+		<display-name>InitDBCP</display-name>
+		<servlet-name>InitDBCP</servlet-name>
+		<servlet-class>kr.or.ddit.db.InitDBCP</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>InitDBCP</servlet-name>
+		<url-pattern>/InitDBCP</url-pattern>
+	</servlet-mapping>
+
+	<resource-ref>
+		<description>DB Connection</description>
+		<res-ref-name>jdbc/oracleDB</res-ref-name>
+		<res-type>javax.sql.DataSource</res-type>
+		<res-auth>Container</res-auth>
+	</resource-ref>
 </web-app>
