--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -30,6 +30,36 @@
 		<servlet-name>TimesTablesServlet</servlet-name>
 		<url-pattern>/TimesTablesServlet</url-pattern>
 	</servlet-mapping>
+
+	<filter>
+		<filter-name>requestCountFilter</filter-name>
+		<filter-class>kr.or.ddit.filter.RequestCounter</filter-class>
+	</filter>
+
+	<filter-mapping>
+		<filter-name>requestCountFilter</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
+
+	<!-- 인코딩 필터 -->
+	<filter>
+		<filter-name>encodingFilter</filter-name>
+		<filter-class>kr.or.ddit.filter.utfController</filter-class>
+		<init-param>
+			<param-name>encoding</param-name>
+			<param-value>UTF-8</param-value>
+		</init-param>
+		<init-param>
+			<param-name>forceEncoding</param-name>
+			<param-value>true</param-value>
+		</init-param>
+	</filter> <!-- 인코딩 필터 적용시킬 위치 -->
+	<filter-mapping>
+		<filter-name>encodingFilter</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
+
+
 	<error-page>
 		<error-code>404</error-code>
 		<location>/error/404/404.jsp</location>
