--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -58,8 +58,18 @@
 		<filter-name>encodingFilter</filter-name>
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
-
-
+	
+	<!-- 로그인 필터 -->
+	<filter>
+		<filter-name>sessionCheckFilter</filter-name>
+		<filter-class>kr.or.ddit.filter.SessionCheckFilter</filter-class>
+	</filter>
+	<filter-mapping>
+		<filter-name>sessionCheckFilter</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
+	<!-- 로그인 필터 -->	
+	
 	<error-page>
 		<error-code>404</error-code>
 		<location>/error/404/404.jsp</location>
