--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -31,43 +31,43 @@
 		<url-pattern>/TimesTablesServlet</url-pattern>
 	</servlet-mapping>
 
-	<filter>
-		<filter-name>requestCountFilter</filter-name>
-		<filter-class>kr.or.ddit.filter.RequestCounter</filter-class>
-	</filter>
+<!-- 	<filter> -->
+<!-- 		<filter-name>requestCountFilter</filter-name> -->
+<!-- 		<filter-class>kr.or.ddit.filter.RequestCounter</filter-class> -->
+<!-- 	</filter> -->
 
-	<filter-mapping>
-		<filter-name>requestCountFilter</filter-name>
-		<url-pattern>/*</url-pattern>
-	</filter-mapping>
+<!-- 	<filter-mapping> -->
+<!-- 		<filter-name>requestCountFilter</filter-name> -->
+<!-- 		<url-pattern>/*</url-pattern> -->
+<!-- 	</filter-mapping> -->
 
 	<!-- 인코딩 필터 -->
-	<filter>
-		<filter-name>encodingFilter</filter-name>
-		<filter-class>kr.or.ddit.filter.utfController</filter-class>
-		<init-param>
-			<param-name>encoding</param-name>
-			<param-value>UTF-8</param-value>
-		</init-param>
-		<init-param>
-			<param-name>forceEncoding</param-name>
-			<param-value>true</param-value>
-		</init-param>
-	</filter> <!-- 인코딩 필터 적용시킬 위치 -->
-	<filter-mapping>
-		<filter-name>encodingFilter</filter-name>
-		<url-pattern>/*</url-pattern>
-	</filter-mapping>
+<!-- 	<filter> -->
+<!-- 		<filter-name>encodingFilter</filter-name> -->
+<!-- 		<filter-class>kr.or.ddit.filter.utfController</filter-class> -->
+<!-- 		<init-param> -->
+<!-- 			<param-name>encoding</param-name> -->
+<!-- 			<param-value>UTF-8</param-value> -->
+<!-- 		</init-param> -->
+<!-- 		<init-param> -->
+<!-- 			<param-name>forceEncoding</param-name> -->
+<!-- 			<param-value>true</param-value> -->
+<!-- 		</init-param> -->
+<!-- 	</filter> 인코딩 필터 적용시킬 위치 -->
+<!-- 	<filter-mapping> -->
+<!-- 		<filter-name>encodingFilter</filter-name> -->
+<!-- 		<url-pattern>/*</url-pattern> -->
+<!-- 	</filter-mapping> -->
 	
 	<!-- 로그인 필터 -->
-	<filter>
-		<filter-name>sessionCheckFilter</filter-name>
-		<filter-class>kr.or.ddit.filter.SessionCheckFilter</filter-class>
-	</filter>
-	<filter-mapping>
-		<filter-name>sessionCheckFilter</filter-name>
-		<url-pattern>/*</url-pattern>
-	</filter-mapping>
+<!-- 	<filter> -->
+<!-- 		<filter-name>sessionCheckFilter</filter-name> -->
+<!-- 		<filter-class>kr.or.ddit.filter.SessionCheckFilter</filter-class> -->
+<!-- 	</filter> -->
+<!-- 	<filter-mapping> -->
+<!-- 		<filter-name>sessionCheckFilter</filter-name> -->
+<!-- 		<url-pattern>/*</url-pattern> -->
+<!-- 	</filter-mapping> -->
 	<!-- 로그인 필터 -->	
 	
 	<error-page>
